--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <button type="button" class="all-clear" value="all-clear">AC</button>
 
             <button type="button" class="equal-sign" value="=">=</button>
+            <button type="button" class="backspace" value="clear">&#8592;</button>
             </div>
         </div>
     </body>
